* Users are now migrated with nonsense passwords from 1,2 (Chris T, 3587257)
* Upgrade now handles new total column in jcitems properly (Chris T)
* Fixed configure_apache.sh, read input, change of file name from 
  ledgersmb-httpd.conf to ledgersmb-httpd.conf.template (Havard S)
* Update INSTALL - section "Adding configuration to Apache 2.x" (Havard S)

Chris T is Chris Travers
Havard S is Havard Sorli

Changelog for 1.3.26
* Added db statistics post-upgrade and pre/post rebuild (Chris T, 3586113)
* Merged in fcgi support from addons (Chris T)
* Clarified UI for changing password vs settings (Chris T, 3588810) 
* Fixed eca selection issues when creating invoices (Chris T, 3588301)
* Added demo templates with for invoices with attached images (Chris T)
* Fixed attached images not appearing in templates (Chris T)
* Fixed projects not attached to customers lost 1.2-1.3 (Chris T, h/t Ario)
* Fixed the rpm file to make a valid ledgersmb-httpd.conf (Havard S, 3593393)
* Dropped seconds/subsecs from password expiration notice (Chris T, 3593963)
* Fixed parts images not available from template. (Chris T, h/t Brian W)
* Fixed fs_cssdir not handling trailing / properly (Chris T, h/t Nigel T)
* Fixed file attachments not retrieving for all invoice parts (Chris T)
* fixed file attachements for invoices not handling _ properly (Chris T)

Brian W is Brian Wolf
Chris T is Chris Travers
Havard S is Havard Sorli
Nigel T is Nigel Titley

Changelog for 1.3.25
* Fixed internal server errors on LedgerSMB->error() during new() (Chris T)
* Fixed pricematrix rows not showing where pricegroups are used (Chris T)
* Fixed missing grant in some cases on cr_coa_to_account (Chris T)
* Fixed letterhead not showing up on emailed invoices (Chris T, h/t Kevin B)
* Fixed blank screen on posting AR/IS/OE via FCGI (Chris T)
* Fixed ECA's not distinct on parts screen and search (Chris T, 3550075)
* Fixed error saving imported user with no existing db role (Chris T, 3559844)